--- a/composer.json
+++ b/composer.json
@@ -1,31 +1,17 @@
 {
     "name": "silverstripe/installer",
-    "type": "silverstripe-recipe",
     "description": "The SilverStripe Framework Installer",
     "require": {
         "php": ">=5.6.0",
-        "silverstripe/recipe-plugin": "^1.2",
-        "silverstripe/recipe-cms": "4.3.0@stable",
-        "silverstripe-themes/simple": "~3.2.0"
-    },
+"silverstripe/cms": "^3.7",
+        "silverstripe/framework": "^3.7",
+        "silverstripe/reports": "^3.7",
+        "silverstripe/siteconfig": "^3.7",
+        "silverstripe-themes/simple": "3.1.*",
+        "symbiote/silverstripe-steamedclams": "^2.0"
+},
     "require-dev": {
         "phpunit/phpunit": "^5.7"
-    },
-    "extra": {
-        "project-files-installed": [
-            "app/.htaccess",
-            "app/_config.php",
-            "app/_config/mysite.yml",
-            "app/src/Page.php",
-            "app/src/PageController.php"
-        ],
-        "public-files-installed": [
-            ".htaccess",
-            "index.php",
-            "install-frameworkmissing.html",
-            "install.php",
-            "web.config"
-        ]
     },
     "config": {
         "process-timeout": 600
